--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>React Parcel Micro App</title>
+        <title>AttiNap</title>
         <link
             href="https://fonts.googleapis.com/css?family=Fredoka+One|Raleway:400,700&display=swap"
             rel="stylesheet"
