Initial firebase config steps

--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
     </head>
     <body>
         <div id="root"></div>
+        <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-app.js"></script>
+
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+        <script src="https://www.gstatic.com/firebasejs/7.8.2/firebase-database.js"></script>
+
+        <script>
+            // Your web app's Firebase configuration
+            var firebaseConfig = {
+                apiKey: 'AIzaSyCb5zp9ElI0-OEcfQIZNBI_ND43leKwxVc',
+                authDomain: 'attinap2020.firebaseapp.com',
+                databaseURL: 'https://attinap2020.firebaseio.com',
+                projectId: 'attinap2020',
+                storageBucket: 'attinap2020.appspot.com',
+                messagingSenderId: '482919166374',
+                appId: '1:482919166374:web:615a4659ac11fb94445f67'
+            }
+            // Initialize Firebase
+            firebase.initializeApp(firebaseConfig)
+        </script>
         <script src="./src/index.js"></script>
     </body>
 </html>
