Configures firebase realtime db, pushes up time updates successfully

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             // Initialize Firebase
             firebase.initializeApp(firebaseConfig)
         </script>
+        <script src="./src/firebase.js"></script>
         <script src="./src/index.js"></script>
     </body>
 </html>
