--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="utf-8" />
         <title>AttiNap</title>
         <link
             href="https://fonts.googleapis.com/css?family=Fredoka+One|Raleway:400,700&display=swap"
